apps/homeassistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/component: monitoring
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
