apps/homeassistant/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webserver
    spec:
      nodeSelector:
        kubernetes.io/hostname: ontos
      containers:
        - name: webserver
          image: docker.io/homeassistant/home-assistant:2026.4.4
          ports:
            - containerPort: 8123
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 1
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "ln -sf /config-from-cm/configuration.yaml /config/configuration.yaml",
                  ]
          volumeMounts:
            - mountPath: /config
              name: homeassistant-data
            - mountPath: /config-from-cm
              name: ha-configuration
            - mountPath: /dev/ttyUSB0
              name: zigbee
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_ADMIN
          livenessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      restartPolicy: Always
      volumes:
        - name: ha-configuration
          configMap:
            name: ha-configuration
        - name: homeassistant-data
          persistentVolumeClaim:
            claimName: homeassistant-data
        - name: zigbee
          hostPath:
            path: /dev/serial/by-id/usb-Silicon_Labs_Sonoff_Zigbee_3.0_USB_Dongle_Plus_0001-if00-port0
            type: CharDevice
