apps/homeassistant/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP
  ports:
    - name: webserver
      port: 8123
      targetPort: 8123
  selector:
    app.kubernetes.io/name: webserver
